Dodanie obsługi description

--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -10,6 +10,10 @@
             <strong>Autor:</strong> {{ book.author }}
         </div>
         <div class="mb-3">
+            <strong>Opis:</strong>
+            <p>{{ book.description is not empty ? book.description : 'Brak opisu.' }}</p>
+        </div>
+        <div class="mb-3">
             <strong>Status:</strong>
             {% if book.status == 'planned' %}planowana
             {% elseif book.status == 'reading' %}czytana
@@ -25,7 +29,7 @@
             <strong>Właściciel (email):</strong> {{ book.user ? book.user.email : '—' }}
         </div>
 
-        <a href="{{ path('book_index') }}" class="btn btn-secondary">Powrót do listy książek</a>
+        <a href="{{ path('home') }}" class="btn btn-secondary">Powrót do listy książek</a>
 {#        {% if is_granted('ROLE_USER') %}#}
 {#            <a href="{{ path('book_edit', {id: book.id}) }}" class="btn btn-primary">Edytuj książkę</a>#}
 {#            <form action="{{ path('book_delete', {id: book.id}) }}" method="post" class="d-inline">#}
