--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -12,7 +12,8 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+
+    <body class="min-h-screen">
+    {% block body %}{% endblock %}
     </body>
 </html>
