--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -29,7 +29,9 @@
             <span class="font-semibold">Właściciel (email):</span> {{ book.user ? book.user.email : '—' }}
         </div>
 
-        <a href="{{ path('home') }}" class="inline-block bg-gray-600 hover:bg-gray-700 text-white px-4 py-2 rounded">Powrót do listy książek</a>
+        <a href="{{ path('book_edit', {id: book.id}) }}" class="inline-block bg-sky-500 hover:bg-zinc-50 hover:text-black text-white px-4 py-2 rounded">Edytuj</a>
+
+        <a href="{{ path('home') }}" class="inline-block bg-sky-500 hover:bg-zinc-50 hover:text-black text-white px-4 py-2 rounded">Powrót do listy książek</a>
         {#        {% if is_granted('ROLE_USER') %}#}
         {#            <a href="{{ path('book_edit', {id: book.id}) }}" class="btn btn-primary">Edytuj książkę</a>#}
         {#            <form action="{{ path('book_delete', {id: book.id}) }}" method="post" class="d-inline">#}
