--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -57,22 +57,24 @@
             </div>
 
             <div class="flex gap-3">
-                <a href="{{ path('book_edit', {id: book.id}) }}"
-                   class="inline-block rounded-xl border border-zinc-300 bg-sky-500 px-5 py-2.5 text-sm font-medium text-white shadow-sm transition hover:bg-zinc-50 hover:text-black active:translate-y-px focus:outline-none focus:ring-4 focus:ring-zinc-200">
-                    Edytuj
-                </a>
+                {% if isOwner %}
+                    <a href="{{ path('book_edit', {id: book.id}) }}"
+                       class="inline-block rounded-xl border border-zinc-300 bg-sky-500 px-5 py-2.5 text-sm font-medium text-white shadow-sm transition hover:bg-zinc-50 hover:text-black active:translate-y-px focus:outline-none focus:ring-4 focus:ring-zinc-200">
+                        Edytuj
+                    </a>
+                {% endif %}
                 <a href="{{ path('home') }}"
                    class="inline-block rounded-xl border border-zinc-300 bg-sky-500 px-5 py-2.5 text-sm font-medium text-white shadow-sm transition hover:bg-zinc-50 hover:text-black active:translate-y-px focus:outline-none focus:ring-4 focus:ring-zinc-200">
                     Powrót do listy książek
                 </a>
             </div>
-            {#        {% if is_granted('ROLE_USER') %}#}
-            {#            <a href="{{ path('book_edit', {id: book.id}) }}" class="btn btn-primary">Edytuj książkę</a>#}
-            {#            <form action="{{ path('book_delete', {id: book.id}) }}" method="post" class="d-inline">#}
-            {#                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ book.id) }}">#}
-            {#                <button type="submit" class="btn btn-danger">Usuń książkę</button>#}
-            {#            </form>#}
-            {#        {% endif %}#}
+{#                    {% if is_granted('ROLE_USER') %}#}
+{#                        <a href="{{ path('book_edit', {id: book.id}) }}" class="btn btn-primary">Edytuj książkę</a>#}
+{#                        <form action="{{ path('book_delete', {id: book.id}) }}" method="post" class="d-inline">#}
+{#                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ book.id) }}">#}
+{#                            <button type="submit" class="btn btn-danger">Usuń książkę</button>#}
+{#                        </form>#}
+{#                    {% endif %}#}
         </div>
     </div>
 <script>
