--- a/app/templates/book/edit.html.twig
+++ b/app/templates/book/edit.html.twig
@@ -30,9 +30,9 @@
                         class="inline-block rounded-xl border border-zinc-300 bg-sky-500 px-5 py-2.5 text-sm font-medium text-white shadow-sm transition hover:bg-zinc-50 hover:text-black active:translate-y-px focus:outline-none focus:ring-4 focus:ring-zinc-200 cursor-pointer">
                     Zapisz zmiany
                 </button>
-                <a href="{{ path('book_show', {id: book.id}) }}"
+                <a href="{{ path('app_profile', {id: book.id}) }}"
                    class="inline-block rounded-xl border border-zinc-300 bg-sky-500 px-5 py-2.5 text-sm font-medium text-white shadow-sm transition hover:bg-zinc-50 hover:text-black active:translate-y-px focus:outline-none focus:ring-4 focus:ring-zinc-200">
-                    Powrót do szczegółów książki
+                    Powrót do moich książek
                 </a>
             </div>
         </form>
