--- a/app/templates/homepage/index.html.twig
+++ b/app/templates/homepage/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Moje książki (demo){% endblock %}
+{% block title %}MyBookShell{% endblock %}
 
 {% block body %}
     <div class="max-w-5xl mx-auto mt-10 px-4">
