--- a/app/templates/homepage/index.html.twig
+++ b/app/templates/homepage/index.html.twig
@@ -11,7 +11,7 @@
             {% if books is empty %}
                 <div class="bg-blue-100 text-blue-800 p-4 rounded-lg">Brak danych w bazie.</div>
                 {% if not app.user %}
-                    <div class="bg-yellow-100 text-yellow-800 p-4 rounded-lg mb-4">
+                    <div class="p-4">
                         Zaloguj się, aby zobaczyć książki.
                     </div>
                 {% endif %}
